[package]
name = "journal-news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
#toml = { version = "0.5.*" }
#serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*" }
home = { version = "0.5.*" }

[[bin]]
name = "journal-news"
path = "src/main.rs"
